--- a/gametribe/src/main/res/layout/activity_second_menu.xml
+++ b/gametribe/src/main/res/layout/activity_second_menu.xml
@@ -67,6 +67,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:layout_marginBottom="@dimen/y5"
             android:orientation="vertical">
 
             <LinearLayout
@@ -101,6 +102,7 @@
                 android:layout_height="0dp"
                 android:layout_marginTop="@dimen/y10"
                 android:layout_weight="1"
+                android:layout_marginBottom="@dimen/y5"
                 android:orientation="horizontal">
 
                 <ImageView
@@ -118,10 +120,6 @@
                     style="@style/second_item_style"
                     android:src="@drawable/second_07" />
 
-                <ImageView
-                    android:id="@+id/item_08"
-                    style="@style/second_item_style"
-                    android:src="@drawable/second_08" />
             </LinearLayout>
 
 
