--- a/gametribe/src/main/res/values/styles.xml
+++ b/gametribe/src/main/res/values/styles.xml
@@ -38,7 +38,9 @@
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">match_parent</item>
         <item name="android:duplicateParentState">true</item>
+        <item name="android:scaleType">fitXY</item>
         <item name="android:focusable">true</item>
+        <item name="android:layout_marginLeft">10dp</item>
         <item name="android:clickable">true</item>
         <item name="android:focusableInTouchMode">true</item>
 
@@ -58,6 +60,9 @@
         <item name="android:gravity">center_vertical</item>
         <item name="android:orientation">horizontal</item>
         <item name="android:background">#33000000</item>
+        <item name="android:focusable">true</item>
+        <item name="android:clickable">true</item>
+        <item name="android:focusableInTouchMode">true</item>
     </style>
     <style name="bottom_num_text_style">
         <item name="android:layout_width">wrap_content</item>
