--- a/gametribe/src/main/res/layout/activity_detaillist.xml
+++ b/gametribe/src/main/res/layout/activity_detaillist.xml
@@ -1,43 +1,38 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:gravity="center"
     android:background="@drawable/bg"
-    android:clipChildren="false"
-    android:orientation="vertical">
+    >
 
-    <android.support.v7.widget.RecyclerView
-        android:focusable="false"
-        android:id="@+id/ry_menu_item"
-        android:layout_width="100dp"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_gravity="center"
-        android:clipToPadding="false"
-        android:paddingBottom="15dp"
-        android:layout_marginBottom="15dp"
-        android:layout_marginStart="38dp"
-        android:layout_marginEnd="35dp"
-        android:layout_marginTop="45dp"
-        android:paddingTop="0dp"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentStart="true"/>
+        android:orientation="horizontal">
 
+        <com.owen.tvrecyclerview.widget.TvRecyclerView
+            android:id="@+id/list_menu"
+            xmlns:app="http://schemas.android.com/apk/res-auto"
+            android:layout_width="240dp"
+            android:layout_marginLeft="10dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:orientation="vertical"
+            app:tv_isMenu="true"
+            app:tv_layoutManager="ListLayoutManager"/>
 
-    <android.support.v7.widget.RecyclerView
-        android:focusable="false"
-        android:id="@+id/ry_detail_list"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:clipToPadding="false"
-        android:paddingBottom="15dp"
-        android:layout_marginBottom="15dp"
-        android:layout_marginStart="38dp"
-        android:layout_marginEnd="35dp"
-        android:layout_marginTop="45dp"
-        android:paddingTop="0dp"
-        android:layout_alignParentTop="true"
-        android:layout_toEndOf="@+id/ry_menu_item" />
+        <com.owen.tvrecyclerview.widget.TvRecyclerView
+            android:id="@+id/list"
+            xmlns:app="http://schemas.android.com/apk/res-auto"
+            android:layout_width="match_parent"
+            android:layout_marginTop="50dp"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            app:tv_isIntelligentScroll="true"
+            app:tv_optimizeLayout="true"
+            app:tv_layoutManager="MetroGridLayoutManager"/>
 
-</RelativeLayout>
+    </LinearLayout>
+
+</FrameLayout>
