--- a/gametribe/src/main/res/layout/detail_list_item.xml
+++ b/gametribe/src/main/res/layout/detail_list_item.xml
@@ -13,8 +13,8 @@
         android:focusable="true"
         android:focusableInTouchMode="true"
         android:clickable="true"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:scaleType="centerCrop"
         />
 
