--- a/gametribe/src/main/res/layout/detail_menu_item.xml
+++ b/gametribe/src/main/res/layout/detail_menu_item.xml
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="300dp"
-    android:layout_height="80dp"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
     android:layout_gravity="center"
-    android:layout_margin="15dp"
-    android:focusable="true"
+    android:layout_margin="20dp"
     android:gravity="center">
 
     <ImageView
@@ -13,6 +12,7 @@
         android:layout_height="wrap_content"
         android:clickable="true"
         android:focusable="true"
+        android:scaleType="centerCrop"
         android:focusableInTouchMode="true"
         android:src="@drawable/second_menu_01_selector"
         />
