--- a/gametribe/src/main/res/layout/activity_detaillist.xml
+++ b/gametribe/src/main/res/layout/activity_detaillist.xml
@@ -25,13 +25,14 @@
         <com.owen.tvrecyclerview.widget.TvRecyclerView
             android:id="@+id/list"
             xmlns:app="http://schemas.android.com/apk/res-auto"
+            android:layout_gravity="center_vertical"
             android:layout_width="match_parent"
             android:layout_marginTop="50dp"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:orientation="vertical"
             app:tv_isIntelligentScroll="true"
             app:tv_optimizeLayout="true"
-            app:tv_layoutManager="MetroGridLayoutManager"/>
+           />
 
     </LinearLayout>
 
