--- a/gametribe/src/main/res/layout/detail_list_item.xml
+++ b/gametribe/src/main/res/layout/detail_list_item.xml
@@ -5,6 +5,7 @@
     android:layout_gravity="center"
     android:layout_margin="15dp"
     android:focusable="true"
+    android:clickable="true"
     android:gravity="center">
 
 
@@ -13,8 +14,8 @@
         android:focusable="true"
         android:focusableInTouchMode="true"
         android:clickable="true"
-        android:layout_width="175dp"
-        android:layout_height="300dp"
+        android:layout_width="120dp"
+        android:layout_height="170dp"
         android:scaleType="fitXY"
         />
 
