--- a/gametribe/src/main/res/layout/activity_second_menu.xml
+++ b/gametribe/src/main/res/layout/activity_second_menu.xml
@@ -20,6 +20,7 @@
         android:orientation="horizontal">
 
         <LinearLayout
+            android:id="@+id/ll"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@drawable/second_menu_bg"
@@ -67,15 +68,15 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:layout_marginLeft="20dp"
             android:layout_marginBottom="@dimen/y5"
             android:orientation="vertical">
 
-            <LinearLayout
+            <GridLayout
                 android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_weight="1"
-                android:orientation="horizontal">
-
+                android:layout_height="match_parent"
+                android:columnCount="4"
+                >
                 <ImageView
                     android:id="@+id/item_01"
                     style="@style/second_item_style"
@@ -95,32 +96,76 @@
                     android:id="@+id/item_04"
                     style="@style/second_item_style"
                     android:src="@drawable/second_04" />
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_marginTop="@dimen/y10"
-                android:layout_weight="1"
-                android:layout_marginBottom="@dimen/y5"
-                android:orientation="horizontal">
-
                 <ImageView
+                    android:layout_marginTop="20dp"
                     android:id="@+id/item_05"
                     style="@style/second_item_style"
                     android:src="@drawable/second_05" />
 
                 <ImageView
+                    android:layout_marginTop="20dp"
                     android:id="@+id/item_06"
                     style="@style/second_item_style"
                     android:src="@drawable/second_06" />
 
                 <ImageView
+                    android:layout_marginTop="20dp"
                     android:id="@+id/item_07"
                     style="@style/second_item_style"
                     android:src="@drawable/second_07" />
+            </GridLayout>
 
-            </LinearLayout>
+<!--            <LinearLayout-->
+<!--                android:layout_width="match_parent"-->
+<!--                android:layout_height="0dp"-->
+<!--                android:layout_weight="1"-->
+<!--                android:orientation="horizontal">-->
+
+<!--                <ImageView-->
+<!--                    android:id="@+id/item_01"-->
+<!--                    style="@style/second_item_style"-->
+<!--                    android:src="@drawable/second_01" />-->
+
+<!--                <ImageView-->
+<!--                    android:id="@+id/item_02"-->
+<!--                    style="@style/second_item_style"-->
+<!--                    android:src="@drawable/second_02" />-->
+
+<!--                <ImageView-->
+<!--                    android:id="@+id/item_03"-->
+<!--                    style="@style/second_item_style"-->
+<!--                    android:src="@drawable/second_03" />-->
+
+<!--                <ImageView-->
+<!--                    android:id="@+id/item_04"-->
+<!--                    style="@style/second_item_style"-->
+<!--                    android:src="@drawable/second_04" />-->
+<!--            </LinearLayout>-->
+
+<!--            <LinearLayout-->
+<!--                android:layout_width="match_parent"-->
+<!--                android:layout_height="0dp"-->
+<!--                android:layout_marginTop="@dimen/y10"-->
+<!--                android:layout_weight="1"-->
+<!--                android:layout_marginBottom="@dimen/y5"-->
+<!--                android:orientation="horizontal">-->
+
+<!--                <ImageView-->
+<!--                    android:id="@+id/item_05"-->
+<!--                    style="@style/second_item_style"-->
+<!--                    android:src="@drawable/second_05" />-->
+
+<!--                <ImageView-->
+<!--                    android:id="@+id/item_06"-->
+<!--                    style="@style/second_item_style"-->
+<!--                    android:src="@drawable/second_06" />-->
+
+<!--                <ImageView-->
+<!--                    android:id="@+id/item_07"-->
+<!--                    style="@style/second_item_style"-->
+<!--                    android:src="@drawable/second_07" />-->
+
+<!--            </LinearLayout>-->
 
 
         </LinearLayout>
