--- a/gametribe/src/main/res/values/styles.xml
+++ b/gametribe/src/main/res/values/styles.xml
@@ -34,12 +34,15 @@
 
     </style>
 
+
     <style name="second_item_style">
-        <item name="android:layout_width">wrap_content</item>
-        <item name="android:layout_height">match_parent</item>
+        <item name="android:layout_width">120dp</item>
+        <item name="android:layout_height">170dp</item>
         <item name="android:duplicateParentState">true</item>
         <item name="android:focusable">true</item>
         <item name="android:layout_marginLeft">10dp</item>
+        <item name="android:layout_marginRight">10dp</item>
+        <item name="android:scaleType">fitXY</item>
         <item name="android:clickable">true</item>
         <item name="android:focusableInTouchMode">true</item>
 
