--- a/gametribe/src/main/res/layout/activity_second_menu.xml
+++ b/gametribe/src/main/res/layout/activity_second_menu.xml
@@ -68,8 +68,9 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginLeft="20dp"
+            android:layout_marginLeft="@dimen/y30"
             android:layout_marginBottom="@dimen/y5"
+            android:layout_gravity="center_horizontal"
             android:orientation="vertical">
 
             <GridLayout
