--- a/gametribe/src/main/res/values/styles.xml
+++ b/gametribe/src/main/res/values/styles.xml
@@ -36,12 +36,12 @@
 
 
     <style name="second_item_style">
-        <item name="android:layout_width">120dp</item>
-        <item name="android:layout_height">170dp</item>
+        <item name="android:layout_width">@dimen/y220</item>
+        <item name="android:layout_height">@dimen/x300</item>
         <item name="android:duplicateParentState">true</item>
         <item name="android:focusable">true</item>
-        <item name="android:layout_marginLeft">10dp</item>
-        <item name="android:layout_marginRight">10dp</item>
+        <item name="android:layout_marginLeft">@dimen/x10</item>
+        <item name="android:layout_marginRight">@dimen/x10</item>
         <item name="android:scaleType">fitXY</item>
         <item name="android:clickable">true</item>
         <item name="android:focusableInTouchMode">true</item>
